Solucionar issues sonar